tests/NormalTests/paczka1/fuzzy1/54266639.err
Error in line 5: 6bD1tSWW A551 94,9
Error in line 1: 4Gb A642 72,2
Error in line 12: 4Gb A551 43,2
Error in line 10: 6bD1tSWW A642 49,8
Error in line 15: b32Xk9P A808 35,4
